# cChardet

./: .gitmodules  MANIFEST.in  Makefile  README.md  meson.build  meson.options  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: benchmark.yml  build-and-upload-to-pypi.yml  build-darwin.yml  build-linux.yml  build-windows.yml  test-darwin.yml  test-linux.yml  test-system-uchardet.yml  test-windows.yml  test.yml
benchmarks/: bench.py  benchmark.py  compare.py  make_nonutf8_corpus.py  run.py
docs/: apply-release-artifact-fix.md  fixing-dropped-sdist-in-release-workflows.md
src/cchardet/: __init__.py  _cchardet.pyx  meson.build  version.py
src/cchardet/uchardet-overlay/: nsMBCSGroupProber.cpp
src/tests/: cchardet_test.py  test_nonutf8_detection.py
src/tests/testdata/zh/: gb18030.txt
tests/: test_1.py
