[build-system]
requires = ["setuptools", "wheel", "cython>=3.0.10", "pkgconfig", "packaging<26"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-frontend = "build"
skip = ["*-win32"]
archs = ["auto"]
test-requires = ['pytest']
test-command = [
    'cd {project}',
    'python -m pytest {project}'
]

environment = {INCLUDE_PATH="/usr/local/include/uchardet", LIBRARY_PATH="/usr/local/lib64/"}
before-build = [
    "git submodule sync --recursive",
    "git submodule update --init --force --recursive --depth=1",
]

[tool.cibuildwheel.macos]
environment = {INCLUDE_PATH="/usr/local/include/uchardet", LIBRARY_PATH="/usr/local/lib/"}
before-build = [
    "git submodule sync --recursive",
    "git submodule update --init --force --recursive --depth=1",
]

[tool.cibuildwheel.windows]
before-build = [
    "git submodule sync --recursive",
    "git submodule update --init --force --recursive --depth=1",
    "make pip"
]

# PyPy builds fail with setuptools>=72 due to a regression in unixccompiler.py.
# This override limits setuptools<72 for PyPy on Linux and macOS only (Windows
# uses a different temp path and is excluded here). The before-build steps must
# be repeated in full because cibuildwheel overrides replace, not append to,
# the platform-level before-build value.
[[tool.cibuildwheel.overrides]]
select = "pp*-manylinux* pp*-musllinux* pp*-macosx*"
before-build = [
    "git submodule sync --recursive",
    "git submodule update --init --force --recursive --depth=1",
    "echo 'setuptools<72' > /tmp/cibw-pypy-constraints.txt",
]
environment = {PIP_CONSTRAINT="/tmp/cibw-pypy-constraints.txt"}
