[project]
name = "faust-cchardet"
authors = [{ name = "PyYoshi", email = "myoshi321go@gmail.com" }]
urls.Homepage = 'https://github.com/faust-streaming/cChardet'
description = 'cChardet is high speed universal character encoding detector.'
readme = { file = 'README.md', content-type = 'text/markdown' }
license = { file = "COPYING" }
classifiers = [
    'License :: OSI Approved :: Mozilla Public License 1.1 (MPL 1.1)',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)',
    'Programming Language :: Cython',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
requires-python = ">= 3.9"
dynamic = ["version"]

[build-system]
requires = ["setuptools", "wheel", "cython>=3.0.10", "pkgconfig", "packaging<26"]
build-backend = "setuptools.build_meta"

[project.scripts]
cchardetect = "cchardet.cli.cchardetect:main"

# The version is the single source of truth in src/cchardet/version.py and is
# wired into the build by setup.py (and exposed at runtime as
# cchardet.__version__). It stays declared as dynamic here.


[tool.rye]
dev-dependencies = [
    "chardet>=5.2.0",
    "cython>=3.0.10",
    "setuptools>=70.0.0",
    "pytest>=8.2.1",
    "ruff>=0.4.6",
]

[tool.ruff]
exclude = ["src/ext"]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "I", "N"]
format.quote-style = "double"
format.indent-style = "space"

[tool.cibuildwheel]
build-frontend = "build"
skip = ["*-win32", "pp*-macosx*", "pp*-win*"]
archs = ["auto"]
test-requires = ['pytest']
test-command = [
    'cd {project}',
    'python -m pytest {project}'
]

environment = {INCLUDE_PATH="/usr/local/include/uchardet", LIBRARY_PATH="/usr/local/lib64/"}
before-build = [
    "git submodule sync --recursive",
    "git submodule update --init --force --recursive --depth=1",
]

[tool.cibuildwheel.macos]
environment = {INCLUDE_PATH="/usr/local/include/uchardet", LIBRARY_PATH="/usr/local/lib/"}
before-build = [
    "git submodule sync --recursive",
    "git submodule update --init --force --recursive --depth=1",
]

[tool.cibuildwheel.windows]
before-build = [
    "git submodule sync --recursive",
    "git submodule update --init --force --recursive --depth=1",
    "make pip"
]

# PyPy builds fail with setuptools>=72 due to a regression in unixccompiler.py.
# This override limits setuptools<72 for PyPy on Linux (macOS and Windows PyPy
# builds are skipped entirely above). The before-build steps must be repeated
# in full because cibuildwheel overrides replace, not append to, the
# platform-level before-build value.
[[tool.cibuildwheel.overrides]]
select = "pp*-manylinux* pp*-musllinux*"
before-build = [
    "git submodule sync --recursive",
    "git submodule update --init --force --recursive --depth=1",
    "echo 'setuptools<72' > /tmp/cibw-pypy-constraints.txt",
]
environment = {PIP_CONSTRAINT="/tmp/cibw-pypy-constraints.txt"}
