[build-system]
requires = ["meson-python>=0.15", "cython>=3.0.10"]
build-backend = "mesonpy"

[project]
name = "faust-cchardet"
description = "cChardet is high speed universal character encoding detector."
readme = "README.rst"
authors = [{ name = "PyYoshi", email = "myoshi321go@gmail.com" }]
license = { text = "MPL-1.1 OR GPL-2.0-or-later OR LGPL-2.1-or-later" }
keywords = ["cython", "chardet", "charsetdetect"]
# meson-python (the build backend) requires Python >= 3.8; 3.6/3.7 can no longer
# be built. Floor set to 3.9 to match this project's current support policy.
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# The version is defined once in meson.build (project(version: ...)) and also
# mirrored in src/cchardet/version.py for runtime cchardet.__version__.
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/faust-streaming/cChardet"

[tool.cibuildwheel]
build-frontend = "build"
skip = ["*-win32", "pp*-macosx*", "pp*-win*"]
archs = ["auto"]
test-requires = ['pytest']
test-command = [
    'cd {project}',
    'python -m pytest {project}'
]
before-build = [
    "git submodule sync --recursive",
    "git submodule update --init --force --recursive --depth=1",
]

[tool.cibuildwheel.macos]
before-build = [
    "git submodule sync --recursive",
    "git submodule update --init --force --recursive --depth=1",
]

[tool.cibuildwheel.windows]
before-build = [
    "git submodule sync --recursive",
    "git submodule update --init --force --recursive --depth=1",
]
